# Vaptiq.ai

./: .coverage  .gitignore  QUICKSTART.md  README.md  RUN_ME_FIRST.md  SECURITY_ANALYSIS_REPORT.md  START_ALL.bat  TESTING.md  TEST_PLAN.md  best_practices.md  commit_fix.bat  commit_playwright_fix.bat  coverage.xml  docker-compose.yml  migrate_structure.bat  netlify.toml  package-lock.json  package.json  walkthrough.md
.agent/workflows/: cleanup.md  generate-best-practices.md  security-audit.md  unit-test.md
.github/workflows/: codacy.yml  security.yml  semgrep.yml  snyk-security.yml  tests.yml
.turbo/daemon/: c30ddc2b6a7db695-turbo.log.2025-11-22
Backend/: .coverage  .dockerignore  .env.example  Dockerfile  LAUNCH_BACKEND.bat  LLM_PROVIDERS.md  PRISMA_SCHEMA_TEMPLATE.txt  SETUP_GUIDE.md  agent.py  auth.py  celery_config.py  coverage.xml  db.py  db_logger.py  db_logger.py.diff  debug_runner.py  diagnostic.py  direct_start.py  install_and_start.bat  main.py  mitre_engine.py  models.py  models_orm.py  pyproject.toml  pytest.ini  reporting.py  requirements.txt  security.py  setup_backend.py  start_backend.bat  store.py  tasks.py  tasks.py.diff  test_reporting.py  validators.py  verifier.py  verifier_agent.py
Backend/prisma/: schema.prisma
Backend/scripts/: audit_credits.py
Backend/tests/: conftest.py  test_agent.py  test_main.py  test_mitre_engine.py  test_models.py  test_tasks.py
Backend/tests/integration/: test_api_endpoints.py
Backend/tests/security/: __init__.py  test_security.py
Backend/tests/unit/: test_agent.py  test_auth.py  test_db_logger.py  test_db_logger.py.diff  test_fanout_architecture.py  test_mitre_engine.py  test_reporting.py  test_security.py  test_verifier_agent.py
Frontend/: .env.example  Dockerfile  install_and_start.bat  middleware.ts  next.config.mjs  package.json  playwright.config.ts  start_frontend.bat  tailwind.config.ts
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/app/auth/config-error/: page.tsx
Frontend/app/dashboard/: layout.tsx  page.tsx
Frontend/app/dashboard/attack-paths/: page.tsx
Frontend/app/dashboard/history/: page.tsx
Frontend/app/dashboard/reports/: page.tsx
Frontend/app/login/: page.tsx
Frontend/components/: scan-log-viewer.tsx  target-verification.tsx
Frontend/components/dashboard/: KPICards.tsx  ScanProgress.tsx  ThreatIntelWidget.tsx  VulnChart.tsx
Frontend/components/layout/: Header.tsx  Sidebar.tsx
Frontend/e2e/: attack-paths.spec.ts  auth.spec.ts  dashboard.spec.ts  history.spec.ts  reporting.spec.ts  scan-workflow.spec.ts
Frontend/lib/: mock-data.ts
docs/: PENETRATION_TESTING.md
security-reports/: audit-summary-20251129.md  audit-summary-20251207.md
